Corretto  "colore" enigma 1 e no-repeat background in enigma 2

--- a/levels/test-a/src/eqc/1. A sample Quiz/index.html
+++ b/levels/test-a/src/eqc/1. A sample Quiz/index.html
@@ -63,9 +63,9 @@
             cursor: pointer;
         }
 
-        li.success { background-color: greenyellow; }
-	li.failure { background-color: red }
         li:hover { background-color: rgba(0, 0, 0, .12); }
+        li.success, li.success:hover { background-color: greenyellow; }
+        li.failure, li.failure:hover { background-color: red }
 
     </style>
 
