--- a/levels/test-a/src/eqc/2. Sample Image Quiz/index.html
+++ b/levels/test-a/src/eqc/2. Sample Image Quiz/index.html
@@ -10,7 +10,7 @@
             text-align: center;
             color: white;
             font: italic bold 150% serif;
-            background: url(background.jpg) no-repeat center/cover fixed;
+            background: url(background.jpg) center/cover fixed;
             position: absolute;
             margin: 0;
             width:100%;
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <p>Find text </p>
+    <p>Find Text</p>
     <img id="zoom" src="prova2small.png" data-zoom-image="prova2large.png" />
     <script>
         document.getElementById("zoom").addEventListener("mouseover", mouseOver);
