--- a/levels/test-a/src/eqc/1. A sample Quiz/index.html
+++ b/levels/test-a/src/eqc/1. A sample Quiz/index.html
@@ -132,8 +132,8 @@
          be moved to an external file so that this HTML file can be less than 40 lines. -->
 
     <div id="button-bar">
-        <div class="button left">Wat</div>
-        <div class="button right">In Here</div>
+        <div class="button left" onclick = "window.alert('Nome utente')">Id</div>
+        <div class="button right" onclick = "window.alert('Punteggio')">Punteggio</div>
     </div>
 
     <h1>
