--- a/levels/test-a/src/eqc/1. A sample Quiz/index.html
+++ b/levels/test-a/src/eqc/1. A sample Quiz/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <!-- Page title, we don't need it since our pages
@@ -15,19 +16,13 @@
     <!-- CSS Style: Fancy things go in here, a lot, but don't be scared,
          I suggest you to skip reading this and go directly to the <body>. -->
     <style>
-		
-		@-webkit-keyframes inOut {
-			0%{
-			transform: scale(1)
-			}
-			50%{
-			transform: scale(0.8)
-			}
-			100%{
-			transform: scale(1)
-			}
-		}
-		
+
+        @-webkit-keyframes inOut {
+            0%   { transform: scale(1.0); }
+            50%  { transform: scale(0.8); }
+            100% { transform: scale(1.0); }
+        }
+
         body {
             text-align: center;
             font-family: 'Open Sans', sans-serif;
@@ -112,6 +107,14 @@
 
         // Function called on exact answer
         function cbSuccess() {
+            if (typeof enigma === 'undefined') {
+                var title = document.querySelector('h1');
+                title.innerHTML = '- Wrong API Error -';
+                title.style.color = 'red';
+                return;
+            }
+
+            enigma.setComplete();
             this.classList.add('success');
         }
 
