--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,700,400' rel='stylesheet' type='text/css'>
   <link href='https://octicons.github.com/components/octicons/octicons/octicons.css' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="css/boilerplate.css">
   <link rel="stylesheet" href="css/main.css">
 
   <style>
@@ -28,6 +27,10 @@
       padding: 1pt 3pt;
     }
 
+    a:visited {
+      color: darkblue;
+    }
+
     #hero {
       background: url(img/title_800.jpg) 70% 50%/cover;
       position: relative;
@@ -38,17 +41,19 @@
 
     header {
       font-family: 'Open Sans', sans-serif;
-
       position: absolute;
       text-align: center;
       top: 50%;
       width: 100%;
       color: #fff;
       font-size: 26px;
+      transition: 1s .6s opacity, 1s .6s transform;
+      opacity: 0;
+      transform: translate(0, 0);
+    }
 
-      -ms-transform: translate(0, -50%);
-      -webkit-transform: translate(0, -50%);
-      -moz-transform: translate(0, -50%);
+    header.shown {
+      opacity: 1;
       transform: translate(0, -50%);
     }
 
@@ -65,17 +70,24 @@
 
     header li {
       display: inline-block;
+      opacity: 0;
+    }
 
+    header li:nth-child(1) { transition: .8s opacity 1.6s; }
+    header li:nth-child(2) { transition: .8s opacity 2.4s; }
+
+    header.shown li {
+      opacity: 1;
     }
 
     header a {
-      color: #ddd;
+      color: #eee !important;
       text-decoration: none;
       font-size: 8pt;
       font-weight: 600;
       text-transform: uppercase;
       letter-spacing: 1pt;
-      background-color: rgba(0, 0, 0, .4);
+      background-color: rgba(0, 0, 0, .5);
       border-radius: 4pt;
       padding: 6pt 8pt;
       margin: 0 12pt;
@@ -84,7 +96,7 @@
 
     header a:hover {
       color: #fff;
-      background-color: rgba(0, 0, 0, .6);
+      background-color: rgba(0, 0, 0, .7);
     }
 
     main {
@@ -117,10 +129,25 @@
     #s-lame {
       color: white;
       position: relative;
-      background: #005888 url(img/sprite1.png) center/cover;
+      background: #005888;
     }
 
-    #s-lame div {
+    #s-lame .background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url(img/sprite1.png) center/cover;
+      transition: .8s opacity;
+      opacity: 0;
+    }
+
+    #s-lame .background.shown {
+      opacity: 1;
+    }
+
+    #s-lame .content {
       background-color: rgba(0, 0, 0, .2);
       margin-top: 60pt;
       margin-left: 45%;
@@ -173,27 +200,34 @@
       width: 228px;
       height: 400px;
       float: right;
-      transform: translate(300px, 0);
-      transition: .5s transform cubic-bezier(0, 0, 0, 1);
+      transform: translate(270px, 0);
+      transition: .7s transform cubic-bezier(0, 0, 0, 1);
+      perspective: 400px;
     }
 
     #phone.shown {
       transform: translate(0, 0px);
     }
 
-    #phone > img {
+    #phone.shown > img {
       margin: 0;
       position: absolute;
       opacity: 0;
+      transition: .7s transform ease-out .1s;
+      transform: rotateY(0deg);
     }
 
-    #phone > img:nth-child(1) { animation: xfade 30s 24s infinite; }
-    #phone > img:nth-child(2) { animation: xfade 30s 18s infinite; }
-    #phone > img:nth-child(3) { animation: xfade 30s 12s infinite; }
-    #phone > img:nth-child(4) { animation: xfade 30s  6s infinite; }
-    #phone > img:nth-child(5) { animation: xfade 30s  0s infinite; }
+    #phone.shown img {
+      transform: rotateY(-15deg);
+    }
 
-    @keyframes xfade {
+    #phone > img:nth-child(1) { animation: phoneslides 30s 24s infinite; }
+    #phone > img:nth-child(2) { animation: phoneslides 30s 18s infinite; }
+    #phone > img:nth-child(3) { animation: phoneslides 30s 12s infinite; }
+    #phone > img:nth-child(4) { animation: phoneslides 30s  6s infinite; }
+    #phone > img:nth-child(5) { animation: phoneslides 30s  0s infinite; }
+
+    @keyframes phoneslides {
       0%   { opacity: 1; }
       20%  { opacity: 1; }
       22%  { opacity: 0; }
@@ -212,6 +246,12 @@
       border-radius: 10pt;
       width: 90%;
       height: 500px;
+      transition: .8s opacity;
+      opacity: 0;
+    }
+
+    #s-stories div.shown {
+      opacity: 1;
     }
 
     #s-stories object {
@@ -243,6 +283,18 @@
       background-color: rgba(255, 255, 255, .4);
       border: 3pt solid rgba(255, 255, 255, .6);
       border-radius: 15pt;
+      transition: .5s opacity, .5s transform;
+      transform: translate(0, 50px);
+      opacity: 0;
+    }
+
+    #s-navigating .container > div:nth-child(1) { transition-delay: 0s; }
+    #s-navigating .container > div:nth-child(2) { transition-delay: .5s; }
+    #s-navigating .container > div:nth-child(3) { transition-delay: 1s; }
+
+    #s-navigating .container.shown > div {
+      transform: translate(0, 0px);
+      opacity: 1;
     }
 
     #s-navigating h3 {
@@ -337,7 +389,7 @@
       bottom: 8pt;
       text-transform: uppercase;
       font-weight: 600;
-      font-size: .8em;
+      font-size: .7em;
       letter-spacing: 1pt;
     }
 
@@ -371,8 +423,9 @@
   </div>
 
   <section id="s-lame">
+    <div class="background"></div>
     <h2>The lamest project ever</h2>
-    <div>
+    <div class="content">
       <p>
         Enigma is a simple quiz application for Android and <del>PCs</del>.
       </p>
@@ -381,7 +434,7 @@
         Collection</i> files.
       </p>
       <p>
-        Sincerely, a Desktop application and group playing were and still are planned features, but manpower isn't
+        Sincerely, a Desktop application and <q>group playing</q> were and still are planned features, but manpower isn't
         enough...
       </p>
     </div>
@@ -400,15 +453,6 @@
       img = new Image(); img.src = 'img/dev3.png'; p.appendChild(img);
       img = new Image(); img.src = 'img/dev2.png'; p.appendChild(img);
       img = new Image(); img.src = 'img/dev1.png'; p.appendChild(img);
-
-      // Show script
-      function scrollf() {
-        if (window.scrollY + window.innerHeight > p.offsetTop + p.clientHeight) {
-          p.classList.add('shown');
-          window.removeEventListener('scroll', scrollf);
-        }
-      }
-      window.addEventListener('scroll', scrollf);
     </script>
 
     <div class="content">
@@ -481,7 +525,7 @@
         <pre>teams-game/android-app/</pre>
         <p>
           The real Android application that can be run on any Android 4.4 device or newer.<br>
-          Start looking at MainActivity or EnigmaApplication to get started.
+          Start looking at <code>MainActivity</code> or <code>EnigmaApplication</code> to get started.
         </p>
       </div>
 
@@ -543,11 +587,11 @@
     </ul>
     <h2>using</h2>
     <ul>
-      <li><img title="IntelliJ IDEA" src="img/logos/intellij.png"/></li>
-      <li><img title="Git" src="img/logos/git.png"/></li>
-      <li><img title="Gradle" src="img/logos/gradle.png"/></li>
-      <li><img title="Scala" src="img/logos/scala.png"/></li>
-      <li><img title="Android" src="img/logos/android.png"/></li>
+      <li><a target="_blank" href="https://www.jetbrains.com/idea/" ><img title="IntelliJ IDEA" src="img/logos/intellij.png"/></a></li>
+      <li><a target="_blank" href="https://git-scm.com/" ><img title="Git" src="img/logos/git.png"/></a></li>
+      <li><a target="_blank" href="https://gradle.org/" ><img title="Gradle" src="img/logos/gradle.png"/></a></li>
+      <li><a target="_blank" href="http://www.scala-lang.org/" ><img title="Scala" src="img/logos/scala.png"/></a></li>
+      <li><a target="_blank" href="https://developer.android.com/" ><img title="Android" src="img/logos/android.png"/></a></li>
     </ul>
     <div id="gh">hosted on <span class="octicon octicon-logo-github"></span></div>
     <div id="page-author">awful and inappropriate page design by Luca Zanussi, public domain</div>
@@ -557,6 +601,33 @@
 
 
 <script src="js/main.js"></script>
+
+<script>
+  var s1bg = document.querySelector('#s-lame .background');
+  var ss = document.querySelector('#s-stories div');
+  var sn = document.querySelector('#s-navigating .container');
+
+  setTimeout(function () {
+    document.querySelector('header').classList.add('shown');
+  }, 50);
+
+  // Show script
+  function scrollf() {
+    if (window.innerHeight - p.getBoundingClientRect().bottom > 0 && !p.classList.contains('shown'))
+      p.classList.add('shown');
+
+    if (window.innerHeight - s1bg.getBoundingClientRect().bottom > 0 && !s1bg.classList.contains('shown'))
+      s1bg.classList.add('shown');
+
+    if (window.innerHeight - ss.getBoundingClientRect().top - 250 > 0 && !ss.classList.contains('shown'))
+      ss.classList.add('shown');
+
+    if (window.innerHeight - sn.getBoundingClientRect().bottom > 0 && !sn.classList.contains('shown'))
+      sn.classList.add('shown');
+  }
+
+  window.addEventListener('scroll', scrollf);
+</script>
 
 </body>
 </html>
