--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,700,400' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Open+Sans:300,600,700,400' rel='stylesheet' type='text/css'>
   <link href='https://octicons.github.com/components/octicons/octicons/octicons.css' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="css/main.css">
